--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto Mono', monospace;
-  margin: 0 25px;
+  margin: 0;
 }
 
 button {
@@ -12,6 +12,14 @@ button {
 
 header {
   display: flex;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+main {
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #preNavContainer {
@@ -32,7 +40,7 @@ header {
   font-weight: 500;
   letter-spacing: 2px;
   line-height: 19px;
-  width: 70%;
+  width: 60%;
   text-align: center;
   margin-top: 4px;
   margin-bottom: 0;
@@ -55,7 +63,7 @@ header {
 
 .languagePicker {
   box-sizing: border-box;
-  width: 10%;
+  width: 20%;
   height: 17px;
   text-align: right;
 }
@@ -76,6 +84,7 @@ header {
 
 
 .padded {
-  padding: 0 20px;
+  padding-left: 4vw;
+  padding-right: 4vw;
   box-sizing: border-box;
 }
