--- a/navbar.css
+++ b/navbar.css
@@ -1,23 +1,23 @@
 nav {
-  overflow: hidden;
   margin: 0;
   box-sizing: border-box;
-  width: 50%;
-}
-
-nav ul {
-  margin: 0;
-  padding: 0;
-  display: inline-block;
+  width: 60%;
   text-align: center;
 }
 
-nav ul li {
+nav #main-nav-list {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+
+}
+
+nav #main-nav-list li {
   display: inline-block;
   list-style-type: none;
 }
 
-nav > ul > li > a {
+nav #main-nav-list > li > a {
   color: #2D4966;
   font-family: "Roboto Mono", monospace;
   font-size: 16px;
@@ -27,14 +27,120 @@ nav > ul > li > a {
   text-align: center;
   display: block;
   text-decoration: none;
+  padding: 23px 2.3vw;
+}
+
+
+#collections {
+  position: relative;
+  display: inline-block;
+}
+
+#collections .content {
+  display: none;
+  /* display: flex; */
+  position: absolute;
+  left: -540px;
+  top: 80px;
+  background-color: #fff;
+  width: 1400px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.55);
+  /* padding: 12px 16px; */
+  padding: 30px;
+  z-index: 2;
+}
+
+#collections .content li {
+  display: block;
+}
+
+#collections:hover .content {
+  display: flex;
+}
+
+#collections .content .column {
+  width: 30%;
+  height: 100%;
+  /* margin: 20px; */
+}
+
+#collections .content .column ul {
+  padding-left: 0;
+}
+
+#collections .content .column ul li a {
+  color: #191919;
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 500;
+  font-size: 16px;
+  text-align: left;
+  text-decoration: none;
+  display: inline-block;
+  padding: 7px 0;
+}
+
+#collections .content .column img {
+  height: 30px;
+  width: 40px;
+  /* background-color: #CECECE; */
+  text-align: center;
+}
+
+.collection-img-container {
+  background-color: #EAEAEA;
+  border: 1px solid #CDCDCD;
+  margin-left: 30px;
+  padding: 50px 0;
 }
 
 .logoContainer {
-  width: 25%;
+  width: 20%;
   box-sizing: border-box;
+  text-align: left;
 }
 
 .iconContainer {
-  width: 25%;
+  width: 20%;
   box-sizing: border-box;
+  text-align: right;
+  padding: 23px 0;
+}
+
+/**
+  media queries
+**/
+
+@media(max-width: 1550px) {
+  #collections .content {
+    left: -430px;
+    width: 1200px;
+  }
+}
+
+@media(max-width: 1350px) {
+  #collections .content {
+    left: -355px;
+    width: 1000px;
+  }
+}
+
+@media(max-width: 1100px) {
+  #collections .content {
+    left: -290px;
+    width: 850px;
+  }
+  nav #main-nav-list > li > a {
+    padding: 23px 1.5vw;
+  }
+}
+
+@media(max-width: 850px) {
+  nav #main-nav-list > li > a {
+    padding: 23px 1vw;
+    font-size: 15px;
+  }
+}
+
+@media(max-width: 767px) {
+  
 }
