--- a/navbar.css
+++ b/navbar.css
@@ -106,6 +106,11 @@ nav #main-nav-list > li > a {
   padding: 23px 0;
 }
 
+.iconContainer > img,
+.iconContainer > .shopping-cart {
+  margin-left: 7px;
+}
+
 /**
   media queries
 **/
@@ -142,5 +147,5 @@ nav #main-nav-list > li > a {
 }
 
 @media(max-width: 767px) {
-  
+
 }
