--- a/cart.css
+++ b/cart.css
@@ -10,8 +10,8 @@
   left: -300px;
   top: 0px;
   z-index: 2;
-  padding-top: 30px;
-  display: none;
+  padding-top: 35px;
+  /* display: none; */
 }
 
 .shopping-cart:hover .cart-wrapper{
@@ -27,12 +27,20 @@
   text-align: left;
 }
 
+.cart-main-container .triangle {
+  position: absolute;
+  top: 22px;
+  right: 38px;
+  transform: scale(1.3, 0.7);
+  color: white;
+  text-shadow: 0px -3px 3px rgba(0,0,0, 0.08);
+}
+
 .cart-main-container .cart-headline {
   color: #181818;
   font-family: "Roboto Mono";
   font-size: 22px;
   font-weight: 500;
-  /* line-height: 29px; */
   text-align: left;
   padding: 10px 40px;
 }
@@ -120,4 +128,20 @@
 
 .checkout-button:hover {
   opacity: 0.8;
+}
+
+@media(max-width: 1100px) {
+  .cart-wrapper {
+    left: -320px;
+  }
+
+  .cart-main-container .triangle {
+    right: 18px;
+  }
+}
+
+@media(max-width: 850px) {
+  .cart-main-container .triangle {
+    right: 21px;
+  }
 }
