--- a/cart.css
+++ b/cart.css
@@ -11,7 +11,7 @@
   top: 0px;
   z-index: 2;
   padding-top: 35px;
-  /* display: none; */
+  display: none;
 }
 
 .shopping-cart:hover .cart-wrapper{
