--- a/cart.css
+++ b/cart.css
@@ -7,7 +7,7 @@
 .cart-wrapper {
   width: 358px;
   position: absolute;
-  left: -300px;
+  right: -34px;
   top: 0px;
   z-index: 2;
   padding-top: 35px;
@@ -36,6 +36,14 @@
   text-shadow: 0px -3px 3px rgba(0,0,0, 0.08);
 }
 
+.cart-main-container .decrease-icon {
+  margin-right: 5px;
+}
+
+.cart-main-container .increase-icon {
+  margin-left: 5px;
+}
+
 .cart-main-container .cart-headline {
   color: #181818;
   font-family: "Roboto Mono";
@@ -62,12 +70,16 @@
   width: 40%;
   height: 110px;
   background-color:#EAEAEA;
+  position: relative;
 }
 
 .cart-img-container img {
   height: 36px;
   width: 46px;
-  padding: 35px 35px;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 
  .cart-product-container {
@@ -132,7 +144,7 @@
 
 @media(max-width: 1100px) {
   .cart-wrapper {
-    left: -320px;
+    right: -14px;
   }
 
   .cart-main-container .triangle {
@@ -141,7 +153,49 @@
 }
 
 @media(max-width: 850px) {
+  .cart-wrapper {
+    right: -20px;
+  }
+
   .cart-main-container .triangle {
     right: 21px;
+  }
+}
+
+@media(max-width: 767px) {
+  .cart-wrapper {
+    right: -18px;
+    left: auto;
+  }
+}
+
+@media(max-width: 400px) {
+  .cart-wrapper {
+    width: 300px;
+    right: -10px;
+  }
+
+  .cart-headline {
+    margin-top: 10px;
+    margin-bottom: -10px;
+  }
+
+  .cart-wrapper .cart-item .cart-img-container {
+    height: 80px;
+    width: 30%;
+  }
+
+  .cart-wrapper .cart-item .cart-product-container {
+    width: 65%;
+  }
+
+  .cart-wrapper .total-amount {
+    font-size: 16px;
+    margin-top: 5px;
+    margin-bottom: -10px;
+  }
+
+  .cart-wrapper .triangle {
+    right: 14px;
   }
 }
