--- a/carousel.css
+++ b/carousel.css
@@ -147,7 +147,7 @@
 
 @media(max-width: 500px) {
   .carousel .slide {
-    height: 300px;
+    height: calc(100vh - 154px);
   }
 
   .carousel .slide .headline {
