--- a/navbar.css
+++ b/navbar.css
@@ -5,19 +5,19 @@ nav {
   text-align: center;
 }
 
-nav #main-nav-list {
+nav .main-nav-list {
   margin: 0;
   padding: 0;
   display: inline-block;
 
 }
 
-nav #main-nav-list li {
+nav .main-nav-list li {
   display: inline-block;
   list-style-type: none;
 }
 
-nav #main-nav-list > li > a {
+nav .main-nav-list > li > a {
   color: #2D4966;
   font-family: "Roboto Mono", monospace;
   font-size: 16px;
@@ -30,6 +30,20 @@ nav #main-nav-list > li > a {
   padding: 23px 2.3vw;
 }
 
+
+nav.mobile {
+  position: fixed;
+  left: -250px;
+  top: 0;
+  background-color: white;
+  z-index: 2;
+  width: 250px;
+  min-height: 100%;
+}
+
+nav.mobile li {
+  display: block;
+}
 
 #collections {
   position: relative;
@@ -134,13 +148,13 @@ nav #main-nav-list > li > a {
     left: -290px;
     width: 850px;
   }
-  nav #main-nav-list > li > a {
+  nav .main-nav-list > li > a {
     padding: 23px 1.5vw;
   }
 }
 
 @media(max-width: 850px) {
-  nav #main-nav-list > li > a {
+  nav .main-nav-list > li > a {
     padding: 23px 1vw;
     font-size: 15px;
   }
