--- a/navbar.css
+++ b/navbar.css
@@ -9,12 +9,14 @@ nav .main-nav-list {
   margin: 0;
   padding: 0;
   display: inline-block;
-
 }
 
 nav .main-nav-list li {
   display: inline-block;
   list-style-type: none;
+}
+nav .main-nav-list li:hover > a {
+  color: rgba(0,0,0, 0.4);
 }
 
 nav .main-nav-list > li > a {
@@ -59,7 +61,6 @@ nav.mobile li {
   background-color: #fff;
   width: 1400px;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.55);
-  /* padding: 12px 16px; */
   padding: 30px;
   z-index: 2;
 }
@@ -75,7 +76,6 @@ nav.mobile li {
 #collections .content .column {
   width: 30%;
   height: 100%;
-  /* margin: 20px; */
 }
 
 #collections .content .column ul {
@@ -96,7 +96,6 @@ nav.mobile li {
 #collections .content .column img {
   height: 30px;
   width: 40px;
-  /* background-color: #CECECE; */
   text-align: center;
 }
 
@@ -153,13 +152,27 @@ nav.mobile li {
   }
 }
 
+@media(max-width: 960px) {
+  #collections .content {
+    left: -250px;
+    width: 750px;
+  }
+}
+
 @media(max-width: 850px) {
   nav .main-nav-list > li > a {
     padding: 23px 1vw;
     font-size: 15px;
   }
+  #collections .content {
+    left: -220px;
+    width: 650px;
+  }
 }
 
 @media(max-width: 767px) {
-
+  #collections .content {
+    display: none;
+    visibility: hidden;
+  }
 }
