--- a/carousel.css
+++ b/carousel.css
@@ -104,6 +104,7 @@
   margin-left: 5px;
   margin-right: 5px;
   display: inline-block;
+  cursor: pointer;
 }
 
 .carousel .markers .marker.selected {
@@ -113,6 +114,11 @@
   position: relative;
   top: 1px;
 }
+
+.carousel .markers .marker:hover {
+  opacity: 0.5;
+}
+
 
 @media(max-width: 1100px) {
   .carousel .slide .content {
