--- a/navbar.css
+++ b/navbar.css
@@ -32,7 +32,6 @@ nav .main-nav-list > li > a {
   padding: 23px 2.3vw;
 }
 
-
 nav.mobile {
   position: fixed;
   left: -250px;
@@ -52,9 +51,13 @@ nav.mobile li {
   display: inline-block;
 }
 
+header.desktop #collections > a {
+  padding-bottom: 60px;
+  margin-bottom: -60px;
+}
+
 #collections .content {
   display: none;
-  /* display: flex; */
   position: absolute;
   left: -540px;
   top: 80px;
@@ -64,6 +67,16 @@ nav.mobile li {
   padding: 30px;
   z-index: 2;
 }
+
+#collections .content .triangle {
+  position: absolute;
+  top: -14px;
+  left: 41%;
+  transform: scale(1.3, 0.7);
+  color: white;
+  text-shadow: 0px -3px 3px rgba(0,0,0, 0.08);
+}
+
 
 #collections .content li {
   display: block;
