--- a/navbar.css
+++ b/navbar.css
@@ -119,21 +119,21 @@ header.desktop #collections > a {
   padding: 50px 0;
 }
 
-.logoContainer {
+.logo-container {
   width: 20%;
   box-sizing: border-box;
   text-align: left;
 }
 
-.iconContainer {
+.icon-container {
   width: 20%;
   box-sizing: border-box;
   text-align: right;
   padding: 23px 0;
 }
 
-.iconContainer > img,
-.iconContainer > .shopping-cart {
+.icon-container > img,
+.icon-container > .shopping-cart {
   margin-left: 7px;
 }
 
